apim-tutorial/choreo-connect/consul/chore-connect/choreo-connect-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: choreo-connect-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - hosts:
      - internal.gw.apim.com
      - adapter.wso2.com
    secretName: tls-secret
  rules:
    - host: internal.gw.apim.com
      http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: router
                  port:
                    number: 9095
    - host: adapter.wso2.com
      http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: adapter
                  port:
                    number: 9843
